--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2019-10-25 11:06+0000\n"
-"PO-Revision-Date: 2019-10-25 11:06+0000\n"
+"POT-Creation-Date: 2019-10-28 11:01+0000\n"
+"PO-Revision-Date: 2019-10-28 11:01+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -3984,9 +3984,7 @@ msgid "Donation to politician"
 msgstr "პოლიტიკოსის შემოწირულობა"
 
 msgid "Donation settings"
-msgstr ""
-"რეგულარული გადახდა "
-"გააქტიურებულია"
+msgstr "გადახდების კონფიგურაცია"
 
 msgid "Donation status"
 msgstr "შემოწირულობის სტატუსი"
@@ -4122,4 +4120,7 @@ msgstr ""
 "რედაქტირებული ვერსია "
 "ძალაში შევა შემდეგი "
 "გადახდიდან."
+
+msgid "Donations"
+msgstr "გადახდები"
 
